# ngc5pm_pj1_rst_server

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  rust-toolchain.toml
config/: defaults.toml
crates/v1/: Cargo.toml
crates/v1/.sqlx/: query-0eac7f348222b62ff14bb4cb098820b175b9c8a2b627d378994a5bb73ca22345.json  query-d6884180c4a248171435ce9f3f369abebb8efedaa961b0ee456ec986c842eefc.json
crates/v1/src/: config.rs  lib.rs  main.rs
crates/v1/src/application/user/: dto.rs  service.rs
crates/v1/src/domain/: error.rs  mod.rs  repository.rs
crates/v1/src/domain/entity/: mod.rs  session.rs  user.rs  user_auth.rs
crates/v1/src/domain/value_obj/: birth_date.rs  email_address.rs  mod.rs  normalized_string.rs  phone_number.rs  public_id.rs  session_id.rs  user_full_name.rs  user_id.rs  user_name.rs  user_password.rs
crates/v1/src/infra/pg/: mod.rs  session_repo.rs  user_auth_repo.rs  user_repo.rs
crates/v1/src/interfaces/http/: dto.rs  error.rs
crates/v1/src/interfaces/http/handler/: user.rs
crates/v1/src/utils/: hashing.rs  logger.rs  mod.rs  randomart.rs  regex.rs  string.rs  workspace.rs
docs/adr/: 000-ADRの導入.md  001-Rustの使用.md  002-PostgreSQLの使用.md  003-Axumの採用.md  004-SQLxの採用.md  005-thiserrorの採用.md  006-VOの使用.md
migrations/: 20250619080642_create_users_table.sql  20250619080651_create_user_auths_table.sql  20250619080658_create_sessions_table.sql
