[workspace]
resolver = "3"
members = ["crates/v1"]

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
nid = "3.0.0"
once_cell = "1.21.3"
functo_rs = "0.1.0"
qualified_do = "0.1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time"] }
unicode-general-category = "1.0.0"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
zxcvbn = "3.1.0"
